--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 gdata==2.0.18
-google-api-python-client==1.6.2
-oauth2client==4.0.0
+gdata-python3==3.0.1
+google-api-python-client==1.7.11
+oauth2client==4.1.3
