--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-gdata==2.0.18
-gdata-python3==3.0.1
 google-api-python-client==1.7.11
-oauth2client==4.1.3
+google-auth-oauthlib==0.4.2
+gspread==3.6.0
